bk_ida/gccida/c0/noce_operand_ok
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_operand_ok/src/ifcvt.c:2052:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)op)] != MODE_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_operand_ok/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_operand_ok/src/ifcvt.c:2053:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)op)] != MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_operand_ok/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_operand_ok/src/ifcvt.c:2054:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)op)] != MODE_VECTOR_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_operand_ok/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_operand_ok/src/ifcvt.c:2070:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( ( rtx)op[1] != const_tiny_rtx[0][( unsigned __int8)BYTE2( *( _DWORD *)op)] ) 
           ^~~~~
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_operand_ok/src/obj/ifcvt.o] Error 1
